# ontology

./: .gitignore  404.html  Dockerfile  Dockerfile.ci  MANIFEST.in  README.md  TODOS.md  index.html  log  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.board/: backlog.md
.github/workflows/: docs.yml
00-overview/: index.html
01-assets/: index.html
02-app/: index.html
02-messages/: index.html
02-properties/: index.html
02-schema/: index.html
02-sprites/: index.html
03-api/: index.html
03-player/: index.html
03-pseudocode/: index.html
03-sprites/: index.html
03-state/: index.html
04-intents/: index.html
04-menus/: index.html
04-messages/: index.html
04-player/: index.html
04-pseudocode/: index.html
05-application/: index.html
05-menus/: index.html
05-plots/: index.html
05-sprites/: index.html
06-architecture/: index.html
06-player/: index.html
06-plots/: index.html
07-application/: index.html
07-pseudocode/: index.html
08-plotting/: index.html
08-pseudocode/: index.html
09-pseudocode/: index.html
assets/objects/: assets.yaml
docs/: 00-overview.md  01-assets.md  02-board.md  02-messages.md  02-properties.md  02-pseudocode.md  02-schema.md  02-sprites.md  03-api.md  03-pseudocode.md  03-sprites.md  03-state.md  04-intents.md  04-menus.md  04-messages.md  04-player.md  04-pseudocode.md  05-plots.md  05-pseudocode.md  05-sprites.md  06-architecture.md  06-plots.md  07-application.md  08-plotting.md  09-pseudocode.md  ADMINISTRATION.md  APPENDIX.md  ARCHITECTURE.md  ASSETS.md  CLI.md  CONFIGURATION.md  DATA_STRUCTURES.md  DEFINITIONS.md  ENGINE.md  ONTOLOGY.md  OVERVIEW.md  PLOTTING.md  ROADMAP.md  SCRIPTING.md  SPRITES.md  (+6 more)
docs/.board/: backlog.md  index.md
docs/assets/: sheet.xcf  spritesheet_layout.xcf
libs/: render.pyx
scripts/: compile  compile.py  conda  dependencies  install  setup.py
src/app/: asset.py  assets.py  intent.py  intents.py
src/onta/: control.py  device.py  gestalt.py  hud.py  interface.py  main.py  process.py  (+4 more)
(+202 files in other folders)
