[metadata]
name = ontology
version = file: src/version.txt
author = Grant Moore
author_email = chinchalinchin@gmail.com
description = a simple, configurable game engine
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_files = 
    LICENSE
platform = any
keywords = game engine, 2D
classifers =
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent
project_urls =
    Documentation = https://chinchalinchin.github.io/scrilla/
    Source = https://github.com/chinchalinchin/scrilla
    
[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find_namespace:
install_requires =
    PySide6 >= 6.2.0
    Pillow  >= 9.2.0
    pynput >= 1.7.6
include_package_data = True


[options.entry_points]
console_scripts =
    ontology = onta.main:be

[options.packages.find]
where = src
exclude =
    tests*
