[metadata]
name = ontology
version = file: src/version.txt
author = Grant Moore
author_email = chinchalinchin@gmail.com
description = a simple, configurable implementation of the LPC spec
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_files = 
    LICENSE
platform = any
keywords = game engine, 2D
classifers =
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent
project_urls =
    Documentation = https://chinchalinchin.github.io/ontology/
    Source = https://github.com/chinchalinchin/ontology
    
[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find_namespace:
install_requires =
    munch >= 2.5.0
    numba >= 0.56.0
    numpy == 1.19.3
    PySide6 >= 6.2.0
    Pillow-SIMD >= 9.0.0.post1
    pynput >= 1.7.6
    PyYAML >= 6.0
include_package_data = True


[options.entry_points]
console_scripts =
    onta = onta.main:entrypoint

[options.packages.find]
where = src
exclude =
    tests*
